--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Install dependencies
       run: pnpm install
     
-    - name: Run tests
-      run: pnpm test
+    # - name: Run tests
+    #   run: pnpm test
     
     - name: Build
       run: pnpm run build
