--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,13 @@
 {
   "version": "2.0.0",
   "tasks": {
-    "build-npm": "deno run -A scripts/build_npm.ts "
+    "build-npm": "deno run -A scripts/build_npm.ts",
+    "test": "vitest ./src/**/*.test.ts --no-watch --threads=false --environment=node"
   },
   "imports": {
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
-    "@std/assert": "jsr:@std/assert@1",
-    "node-fetch": "npm:node-fetch@^3.3.2"
+    "node-fetch": "npm:node-fetch@^3.3.2",
+    "vite": "npm:vite@^6.0.11",
+    "vitest": "npm:vitest@^3.0.4"
   }
 }
